# a-code_space

./: accel_logger.py  docker_build.sh
aichallenge/: run_evaluation.bash
aichallenge/install.old/: setup.bash  setup.ps1  setup.sh  setup.zsh
aichallenge/install.old/traj_follower_py/lib/traj_follower_py/: traj_follower
aichallenge/install.old/traj_follower_py/share/traj_follower_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
aichallenge/install/traj_follower_cpp/share/traj_follower_cpp/: local_setup.sh  package.dsv  package.ps1  package.sh
aichallenge/log/: latest_build
aichallenge/rosbag2_autoware/: metadata.yaml
aichallenge/rosbag2_autoware/output/: accel_map.csv
aichallenge/workspace/src/aichallenge_submit/python_trajectory_editor/: python_trajectory_editor.py
aichallenge/workspace/src/install/: local_setup.sh  setup.sh
aichallenge/workspace/src/log/: latest_build
aichallenge/workspace/src/traj_follower_cpp/: CMakeLists.txt
aichallenge/workspace/src/traj_follower_cpp/src/: traj_follower_node.cpp
aichallenge/workspace/src/traj_follower_py/: package.xml  setup.cfg  setup.py
aichallenge/workspace/src/traj_follower_py/config/: traj_follower_params.yaml
aichallenge/workspace/src/traj_follower_py/launch/: traj_follower.launch.py
aichallenge/workspace/src/traj_follower_py/traj_follower_py/: traj_follower_node.py  traj_follower_py.py
aichallenge/workspace/src/traj_follower_py/trajectory/: trajectory_with_speed.csv
aichallenge/workspace/src/xy_logger/: package.xml  setup.cfg  setup.py
(+53 files in other folders)
